bk_ida/gccida/g3/rtx_equal_for_cselib_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/rtx_equal_for_cselib_p/src/cselib.c:893:27: error: use of undeclared identifier 'machine_mode'
v18 = cselib_lookup( x, ( machine_mode)*( ( unsigned __int8 *)x + 2), 0); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/rtx_equal_for_cselib_p/src/cselib.c:899:27: error: use of undeclared identifier 'machine_mode'
v17 = cselib_lookup( y, ( machine_mode)*( ( unsigned __int8 *)y + 2), 0); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/rtx_equal_for_cselib_p/src/cselib.c:909:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)val_rtx->fld[0]; 
                       ^~~~~~~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/rtx_equal_for_cselib_p/src/obj/cselib.o] Error 1
